opt: add clippath to reproduce this issue

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,16 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <!-- <style>
+    flt-backdrop-filter::before {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      backdrop-filter: blur(50px);
+      background-color: rgba(123, 123, 123, 0.7);
+      z-index: -1;
+    }
+  </style> -->
 </head>
 <body>
   <script>
